[metadata]
name = pymetamaplite
version = 0.4
description = MetaMapLite Entity Recognizer implementation
author = Willie Rogers
author_email = wjrogers@mail.nih.gov
url = https://metamap.nlm.nih.gov/
license = Public Domain
classifiers =
    Programming Language :: Python :: 3
    License :: Public Domain
    Operating System :: OS Independent


[options]
package_dir =
     = src    
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src